--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -33,4 +33,14 @@
         tools:layout_editor_absoluteX="272dp"
         tools:layout_editor_absoluteY="648dp" />
 
+    <TextView
+        android:id="@+id/apitest"
+        android:layout_width="333dp"
+        android:layout_height="537dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
