--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Pokemon GO"
+        android:text="Pokémon GO"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -53,7 +53,7 @@
         android:layout_width="368dp"
         android:layout_height="140dp"
         android:background="#3F51B5"
-        android:text="I found a cool pokemon!"
+        android:text="I found a cool pokémon!"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
