--- a/app/src/main/res/xml/google_maps_preferences.xml
+++ b/app/src/main/res/xml/google_maps_preferences.xml
@@ -2,7 +2,9 @@
 
     <EditTextPreference
         app:key="mapZoom"
-        app:title="@string/google_maps_zoom_title" />
+        app:title="@string/google_maps_zoom_title"
+        app:icon="@drawable/ic_mapzoom_settings_black_24dp"
+        app:defaultValue="@integer/zoomLevel"/>
 
 
 </PreferenceScreen>
